refactor: integrates my-framework